Updated YAML and using single quotes (common convention)

--- a/config.yaml
+++ b/config.yaml
@@ -1,4 +1,7 @@
 # config.yaml - default config for cheap running & debugging
 debug: True
 openai:
-  model: "gpt-3.5-turbo" # / gpt-4 (for better performance) 
+  model: 'gpt-3.5-turbo' # / gpt-4 (for better performance)
+api_calls:
+  estimate_shipping:
+    url: 'https://qiyrhobdkqezshwhokmw.supabase.co/rest/v1/rpc/calculateshippingcost' # Change to your URL
