--- a/config.yaml
+++ b/config.yaml
@@ -1,5 +1,6 @@
 # config.yaml - default config for cheap running & debugging
 debug: True
+reload: True
 openai:
   model: 'gpt-3.5-turbo' # / gpt-4 (for better performance)
 api_calls:
